<resources>

    <string name="app_name">YamViewer</string>
    <string name="confirm">確認</string>
    <string name="clear">重新輸入</string>
    <string name="clear_history">清除歷史紀錄</string>
    <string name="hint_enter_user_name">請輸入帳號</string>
    <string name="user_name_cant_be_empty">帳號不可為空</string>
    <string name="default_user_name">david520lisa</string>
    <string name="default_album_id">9194202</string>
    <string name="previous_page">上一頁</string>
    <string name="next_page">下一頁</string>
    <string name="page_number">第%1$d頁</string>
    <string name="no_photo_description">無照片描述</string>
    <string name="no_album_description">無相簿描述</string>
    <string name="photos_quantity">%1$d張照片</string>
    <string name="already_first_page">已經在第1頁</string>
    <string name="already_last_page">已在最後一頁(%1$d)</string>
    <string name="view_count">%1$d次觀看</string>
    <string name="locked_albums">已鎖</string>
    <string name="open_albums">公開</string>
    <string name="all_albums">所有</string>
    <string name="locked_album_prefix">(鎖)\ </string>
    <string name="pop_user_name">常用帳號</string>
    <string name="search_history_list">瀏覽紀錄</string>
    <string name="pchome_button">PChome相簿</string>

</resources>
