<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_enter_user_name"
        android:inputType="text"
        android:text="@string/default_user_name"/>

    <EditText
        android:id="@+id/album_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:hint="@string/hint_enter_album_id"
        android:inputType="number"
        android:text="@string/default_album_id"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/album_id"
        android:text="@string/confirm"/>

</android.support.constraint.ConstraintLayout>