<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/album_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_next_page"/>

    <Button
        android:id="@+id/btn_all_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_albums"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_open_albums"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_open_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_albums"
        app:layout_constraintStart_toEndOf="@id/btn_all_albums"
        app:layout_constraintEnd_toStartOf="@id/btn_locked_albums"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_locked_albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locked_albums"
        app:layout_constraintStart_toEndOf="@id/btn_open_albums"
        app:layout_constraintEnd_toStartOf="@id/btn_previous_page"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/btn_previous_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_page"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btn_locked_albums"
        app:layout_constraintEnd_toStartOf="@id/btn_next_page"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page"
        app:layout_constraintStart_toEndOf="@id/btn_previous_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>